--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.11.0"
+    "@netlify/functions": "^3.1.10",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "^22.16.3",
+    "astro": "^5.11.0",
+    "netlify": "^21.6.0",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^4.9.5"
   }
 }
